<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.menu.ui.mainHome.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_examination"
        android:name="com.example.menu.ui.mainHome.examination.ExaminationFragment"
        android:label="@string/title_examination"
        tools:layout="@layout/fragment_examination" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.menu.ui.mainHome.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.menu.ui.mainHome.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />

</navigation>