<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <com.example.menu.ui.setCircleImage.CircleImageView
        android:id="@+id/user_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/user_icon"
        app:srcCompat="@drawable/ic_default_head_user" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/user_name_text"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_parenthesis"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="5dp" />
            <TextView
                android:id="@+id/user_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp"
                android:textColor="@color/colorFontBlack"
                android:layout_marginLeft="2dp">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_parenthesis"
                android:layout_marginTop="5dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/personal_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/personal_introduction"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/follow"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:text="@string/follow" />

</LinearLayout>