<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/retrieve_password_navigation"
    app:startDestination="@+id/navigation_retrieve_user"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_retrieve_user"
        android:name="com.example.menu.ui.mainHome.mine.retrievePassword.inputUser.InputUserFragment"
        android:label="@string/input_userName_page"
        tools:layout="@layout/fragment_retrieve_user" />

    <fragment
        android:id="@+id/navigation_retrieve_security"
        android:name="com.example.menu.ui.mainHome.mine.retrievePassword.inputSecurity.InputSecurityFragment"
        android:label="@string/input_securityQuestion_page"
        tools:layout="@layout/fragment_retrieve_security" />

    <fragment
        android:id="@+id/navigation_retrieve_password"
        android:name="com.example.menu.ui.mainHome.mine.retrievePassword.inputPassword.InputPasswordFragment"
        android:label="@string/input_changePassword_page"
        tools:layout="@layout/fragment_retrieve_password" />

</navigation>